--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,3 @@
 [workspace]
-members = ["ch01", "ch02", "ch03", "ch04", "ch05"]
+members = ["ch01",  "ch04", "ch05", "ch06", "ch07"]
+resolver = "2"
