--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["ch01",  "ch04", "ch05", "ch06", "ch07"]
+members = ["ch01", "ch02", "ch04", "ch05", "ch06", "ch07", "ch08"]
 resolver = "2"
