--- a/ch02/Cargo.toml
+++ b/ch02/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+futures = "0.3"
+tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+rand = "0.8.5"
 
