--- a/ch10/Cargo.toml
+++ b/ch10/Cargo.toml
@@ -4,15 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.65"
-async-std = "1.12.0"
-async-stream = "0.3.3"
-async-trait = "0.1.57"
-bytes = "1.2.1"
-futures = { version = "0.3.24", features = ["executor", "thread-pool"] } 
-futures-lite = "1.12.0"
-futures-util = "0.3.24"
-monoio = "0.1.9"
-smol = "1.2.5"
-tokio = { version = "1.21.2", features = ["full"] }
-value-bag = "1.4.1"
+fast-threadpool = "0.3.0"
+rusty_pool = "0.7.0"
+scheduled-thread-pool = "0.2.6"
+threadpool = "1.8.1"
+tokio = { version = "1.32.0", features = ["full"] }
+scoped-thread-pool = "1.0.4"
