--- a/ch07/Cargo.toml
+++ b/ch07/Cargo.toml
@@ -8,3 +8,5 @@ thread-control = "0.1.2"
 rayon = "1.5.3"
 terminate-thread = "0.3"
 ctx-thread = "0.1.1"
+tokio = { version = "1.43.0", features = ["full"] }
+tokio-scoped = "0.2.0"
