--- a/ch12/Cargo.toml
+++ b/ch12/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+futures = "0.3.31"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1.17"
